Fix: 更新 History 和 加入Sport_Img 註解

--- a/IFang-Program/Final_Project/Training_History.ipynb
+++ b/IFang-Program/Final_Project/Training_History.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sequential"
+    "## Sequential"
    ]
   },
   {
@@ -971,12 +971,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### No.16 層數對稱排列"
+    "### No.16 層數對稱排列 (None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -990,10 +990,8 @@
     "# model.add(MaxPooling2D(2))\n",
     "# model.add(Conv2D(filters=32, kernel_size=3, strides=1, padding='same', activation='relu'))\n",
     "# model.add(MaxPooling2D(2))\n",
-    "\n",
     "# # Flatten the feature map\n",
     "# model.add(Flatten())\n",
-    "\n",
     "# # Add the fully connected layers\n",
     "# model.add(Dense(128, activation='relu'))\n",
     "# model.add(Dropout(0.25))\n",
@@ -1005,7 +1003,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# MobilenetV2"
+    "## MobilenetV2"
    ]
   },
   {
@@ -1426,34 +1424,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# from tensorflow.keras.applications.mobilenet_v2 import MobileNetV2\n",
+    "\n",
+    "# base = MobileNetV2(weights = 'imagenet', include_top = False, input_shape = INPUT_SHAPE)\n",
+    "    \n",
+    "# for layer in base.layers:\n",
+    "#     layer.trainable =  False\n",
+    "\n",
+    "# model = Sequential()\n",
+    "# model.add(base)\n",
+    "# model.add(GlobalAveragePooling2D())\n",
+    "\n",
+    "\n",
     "# model.add(Dense(512, activation='relu', kernel_regularizer=l2(1e-4)))\n",
     "# model.add(BatchNormalization())\n",
     "# model.add(Dropout(0.2))\n",
     "\n",
     "# model.add(Dense(512, activation='relu', kernel_regularizer=l2(1e-4)))\n",
     "# model.add(BatchNormalization())\n",
-    "# model.add(Dropout(0.2))"
+    "# model.add(Dropout(0.2))\n",
+    "# model.summary()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### No.25 使用 MobileNetV3 模型 Dropout(0.2) "
+    "## MobileNetV3"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 其他模型"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### ( 還沒測試 ) 使用 resnet18 模型"
+    "#### MobileNetV3Small ( 效果蠻差的 )"
    ]
   },
   {
@@ -1462,18 +1466,145 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# model = models.resnet18(weights=models.ResNet18_Weights.IMAGENET1K_V1)\n",
-    "# torch.manual_seed(42)\n",
-    "# model.fc = nn.Linear(model.fc.in_features, num_labels)\n",
-    "# model = model.to(device)\n",
-    "# print(\"Number of trainable parameters -\", sum(p.numel() for p in model.parameters() if p.requires_grad))"
+    "# base = tf.keras.applications.MobileNetV3Small(weights = 'imagenet', include_top = False, input_shape = INPUT_SHAPE)\n",
+    "# for layer in base.layers:\n",
+    "#     layer.trainable =  False\n",
+    "\n",
+    "# model = Sequential()\n",
+    "# model.add(base)\n",
+    "# model.add(GlobalAveragePooling2D())\n",
+    "\n",
+    "# model.add(Dense(256, activation='relu', kernel_regularizer=l2(L2)))\n",
+    "# model.add(BatchNormalization())\n",
+    "# model.add(Dropout(0.2))\n",
+    "\n",
+    "# model.add(Dense(256, activation='relu', kernel_regularizer=l2(L2)))\n",
+    "# model.add(BatchNormalization())\n",
+    "# model.add(Dropout(0.2))\n",
+    "\n",
+    "# model.add(Dense(len(train_generator.class_indices), activation='softmax'))\n",
+    "# model.summary()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ( 還沒測試 ) 使用 Vgg11 模型"
+    "#### MobileNetV3Large ( 效果蠻差的 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# base = tf.keras.applications.MobileNetV3Large(weights = 'imagenet', include_top = False, input_shape = INPUT_SHAPE)\n",
+    "# for layer in base.layers:\n",
+    "#     layer.trainable =  False\n",
+    "\n",
+    "# model = Sequential()\n",
+    "# model.add(base)\n",
+    "# model.add(GlobalAveragePooling2D())\n",
+    "\n",
+    "# model.add(Dense(256, activation='relu', kernel_regularizer=l2(L2)))\n",
+    "# model.add(BatchNormalization())\n",
+    "# model.add(Dropout(0.2))\n",
+    "\n",
+    "# model.add(Dense(256, activation='relu', kernel_regularizer=l2(L2)))\n",
+    "# model.add(BatchNormalization())\n",
+    "# model.add(Dropout(0.2))\n",
+    "\n",
+    "# model.add(Dense(len(train_generator.class_indices), activation='softmax'))\n",
+    "# model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## VGG"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### VGG16 模型 (accuracy: 0.6633  loss: 1.3100 kaggle: 0.74059)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# img_height = 224\n",
+    "# img_width = 224\n",
+    "# INPUT_SHAPE = (img_height, img_width, 3)\n",
+    "\n",
+    "# BSIZE = 64\n",
+    "# L2 = 0.0001\n",
+    "\n",
+    "# EPOCHS = 10\n",
+    "# LR = 0.001\n",
+    "# base = tf.keras.applications.VGG16(weights = 'imagenet', include_top = False, input_shape = INPUT_SHAPE)\n",
+    "# for layer in base.layers:\n",
+    "#     layer.trainable =  False\n",
+    "\n",
+    "# model = Sequential()\n",
+    "# model.add(base)\n",
+    "# model.add(GlobalAveragePooling2D())\n",
+    "\n",
+    "# model.add(Dense(256, activation='relu', kernel_regularizer=l2(L2)))\n",
+    "# model.add(BatchNormalization())\n",
+    "# model.add(Dropout(0.2))\n",
+    "\n",
+    "# model.add(Dense(256, activation='relu', kernel_regularizer=l2(L2)))\n",
+    "# model.add(BatchNormalization())\n",
+    "# model.add(Dropout(0.2))\n",
+    "\n",
+    "# model.add(Dense(len(train_generator.class_indices), activation='softmax'))\n",
+    "# model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### VGG16 ( 尚未測試 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# base_model = VGG16(weights=\"imagenet\", include_top=False, input_shape=(224,224,3))\n",
+    "\n",
+    "# # Freeze the base model layers (optional, can be fine-tuned later)\n",
+    "# for layer in base_model.layers:\n",
+    "#     layer.trainable = False\n",
+    "\n",
+    "# # Add custom layers for classification\n",
+    "# x = base_model.output\n",
+    "# x = GlobalAveragePooling2D()(x)\n",
+    "# x = Dense(512,activation='relu')(x)\n",
+    "# x = Dense(512,activation='relu')(x)\n",
+    "# x = Dropout(0.2)(x)\n",
+    "# predictions = Dense(100,activation=\"softmax\")(x)  # Adjust output size for 500 species\n",
+    "\n",
+    "# # Create the final model\n",
+    "# model_vgg16 = Model(inputs=base_model.input, outputs=predictions)\n",
+    "# model_vgg16.summary()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### VGG11 模型 ( 尚未測試 )"
    ]
   },
   {
@@ -1493,7 +1624,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ( 還沒測試 ) 使用 Eficientnet_B1 模型"
+    "## EfficientNet"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### EfficientNet_B0 模型 ( 效果蠻差的 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# base =  tf.keras.applications.EfficientNetB0(weights = 'imagenet', include_top = False, input_shape = INPUT_SHAPE)\n",
+    "\n",
+    "# for layer in base.layers:\n",
+    "#     layer.trainable =  False\n",
+    "\n",
+    "# model = Sequential()\n",
+    "# model.add(base)\n",
+    "# model.add(GlobalAveragePooling2D())\n",
+    "\n",
+    "# model.add(Dense(256, activation='relu', kernel_regularizer=l2(L2)))\n",
+    "# model.add(BatchNormalization())\n",
+    "# model.add(Dropout(0.2))\n",
+    "\n",
+    "# model.add(Dense(256, activation='relu', kernel_regularizer=l2(L2)))\n",
+    "# model.add(BatchNormalization())\n",
+    "# model.add(Dropout(0.2))\n",
+    "\n",
+    "# model.add(Dense(len(train_generator.class_indices), activation='softmax'))\n",
+    "# model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### EfficientNet_B1 模型 ( 尚未測試 )"
    ]
   },
   {
@@ -1513,12 +1685,98 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ( 還沒測試 ) 使用 Resnet50 模型"
+    "效果不好"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# base =  tf.keras.applications.EfficientNetB1(weights = 'imagenet', include_top = False, input_shape = INPUT_SHAPE)\n",
+    "\n",
+    "# for layer in base.layers:\n",
+    "#     layer.trainable =  False\n",
+    "\n",
+    "# model = Sequential()\n",
+    "# model.add(base)\n",
+    "# model.add(GlobalAveragePooling2D())\n",
+    "\n",
+    "# model.add(Dense(256, activation='relu', kernel_regularizer=l2(L2)))\n",
+    "# model.add(BatchNormalization())\n",
+    "# model.add(Dropout(0.2))\n",
+    "\n",
+    "# model.add(Dense(256, activation='relu', kernel_regularizer=l2(L2)))\n",
+    "# model.add(BatchNormalization())\n",
+    "# model.add(Dropout(0.2))\n",
+    "\n",
+    "# model.add(Dense(len(train_generator.class_indices), activation='softmax'))\n",
+    "# model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### EffientNetB3 ( 尚未測試 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# base_model = tf.keras.applications.efficientnet.EfficientNetB3(include_top= False, weights= \"imagenet\", input_shape= img_shape, pooling= 'max')\n",
+    "\n",
+    "# model = Sequential([\n",
+    "#     base_model,\n",
+    "#     BatchNormalization(axis= -1, momentum= 0.99, epsilon= 0.001),\n",
+    "#     Dense(256, kernel_regularizer= regularizers.l2(l= 0.016), activity_regularizer= regularizers.l1(0.006),\n",
+    "#                 bias_regularizer= regularizers.l1(0.006), activation= 'relu'),\n",
+    "#     Dropout(rate= 0.45, seed= 123),\n",
+    "#     Dense(class_count, activation= 'softmax')\n",
+    "# ])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Resnet"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Resnet18 模型 ( 尚未測試 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model = models.resnet18(weights=models.ResNet18_Weights.IMAGENET1K_V1)\n",
+    "# torch.manual_seed(42)\n",
+    "# model.fc = nn.Linear(model.fc.in_features, num_labels)\n",
+    "# model = model.to(device)\n",
+    "# print(\"Number of trainable parameters -\", sum(p.numel() for p in model.parameters() if p.requires_grad))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Resnet50 模型 ( 尚未測試 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1574,32 +1832,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ( 還沒測試 ) 使用 EfficientNet_B3 模型"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# base_model = tf.keras.applications.efficientnet.EfficientNetB3(include_top= False, weights= \"imagenet\", input_shape= img_shape, pooling= 'max')\n",
-    "\n",
-    "# model = Sequential([\n",
-    "#     base_model,\n",
-    "#     BatchNormalization(axis= -1, momentum= 0.99, epsilon= 0.001),\n",
-    "#     Dense(256, kernel_regularizer= regularizers.l2(l= 0.016), activity_regularizer= regularizers.l1(0.006),\n",
-    "#                 bias_regularizer= regularizers.l1(0.006), activation= 'relu'),\n",
-    "#     Dropout(rate= 0.45, seed= 123),\n",
-    "#     Dense(class_count, activation= 'softmax')\n",
-    "# ])"
+    "## Xception"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ( 還沒測試 ) 使用 Xception 模型"
+    "### Xception 尚未測試"
    ]
   },
   {
@@ -1631,21 +1871,65 @@
     "# # model_xception.add(Dropout(0.3))\n",
     "\n",
     "# # Adding the final Dense layer with 100 units and 'softmax' activation\n",
-    "# model_xception.add(Dense(100, activation='softmax'))\n"
+    "# model_xception.add(Dense(100, activation='softmax'))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### !No.19 使用 EfficientNetB0 模型"
+    "## DenseNet201"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ( 還沒測試 ) 使用 VGG16 模型"
+    "### DenseNet201 尚未測試"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pretrained_model3 = tf.keras.applications.DenseNet201(input_shape=(100,100,3),include_top=False,weights='imagenet',pooling='avg')\n",
+    "# pretrained_model3.trainable = False\n",
+    "# inputs3 = pretrained_model3.input\n",
+    "# x3 = tf.keras.layers.Dense(128, activation='relu')(pretrained_model3.output)\n",
+    "# outputs3 = tf.keras.layers.Dense(len(Name), activation='softmax')(x3)\n",
+    "# model = tf.keras.Model(inputs=inputs3, outputs=outputs3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 效果最好的兩個樣本"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### MobileNetV2 模型 (accuracy: 0.6684 loss: 1.3281 kaggle: 0.73399) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 詳細模型架構\n",
+    "- L2 = 0.0001\n",
+    "\n",
+    "- BSIZE = 64\n",
+    "\n",
+    "- base + 1 Layer (Dropout (0.2))\n",
+    "\n",
+    "- optimizer='adam' ( Learning Rate = 0.001)\n",
+    "\n",
+    "- Epoch = 10"
    ]
   },
   {
@@ -1654,15 +1938,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# img_height = 224\n",
-    "# img_width = 224\n",
-    "# INPUT_SHAPE = (img_height, img_width, 3)\n",
+    "# from tensorflow.keras.applications.mobilenet_v2 import MobileNetV2\n",
     "\n",
-    "# BSIZE = 64\n",
-    "# L2 = 0.0001\n",
+    "# base = MobileNetV2(weights = 'imagenet', include_top = False, input_shape = INPUT_SHAPE)\n",
+    "    \n",
+    "# for layer in base.layers:\n",
+    "#     layer.trainable =  False\n",
     "\n",
-    "# EPOCHS = 10\n",
-    "# LR = 0.001\n",
+    "# model = Sequential()\n",
+    "# model.add(base)\n",
+    "# model.add(GlobalAveragePooling2D())\n",
+    "\n",
+    "\n",
+    "# model.add(Dense(512, activation='relu', kernel_regularizer=l2(1e-4)))\n",
+    "# model.add(BatchNormalization())\n",
+    "# model.add(Dropout(0.2))\n",
+    "\n",
+    "# model.add(Dense(512, activation='relu', kernel_regularizer=l2(1e-4)))\n",
+    "# model.add(BatchNormalization())\n",
+    "# model.add(Dropout(0.2))\n",
+    "# model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### VGG16 模型 (accuracy: 0.6633  loss: 1.3100 kaggle: 0.74059)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 詳細模型架構\n",
+    "- L2 = 0.0001\n",
+    "\n",
+    "- BSIZE = 64\n",
+    "\n",
+    "- optimizer='adam' ( Learning Rate = 0.001)\n",
+    "\n",
+    "- Epoch = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# base = tf.keras.applications.VGG16(weights = 'imagenet', include_top = False, input_shape = INPUT_SHAPE)\n",
     "# for layer in base.layers:\n",
     "#     layer.trainable =  False\n",
@@ -1681,84 +2005,6 @@
     "\n",
     "# model.add(Dense(len(train_generator.class_indices), activation='softmax'))\n",
     "# model.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# base_model = VGG16(weights=\"imagenet\", include_top=False, input_shape=(224,224,3))\n",
-    "\n",
-    "# # Freeze the base model layers (optional, can be fine-tuned later)\n",
-    "# for layer in base_model.layers:\n",
-    "#     layer.trainable = False\n",
-    "\n",
-    "# # Add custom layers for classification\n",
-    "# x = base_model.output\n",
-    "# x = GlobalAveragePooling2D()(x)\n",
-    "# x = Dense(512,activation='relu')(x)\n",
-    "# x = Dense(512,activation='relu')(x)\n",
-    "# x = Dropout(0.2)(x)\n",
-    "# predictions = Dense(100,activation=\"softmax\")(x)  # Adjust output size for 500 species\n",
-    "\n",
-    "# # Create the final model\n",
-    "# model_vgg16 = Model(inputs=base_model.input, outputs=predictions)\n",
-    "# model_vgg16.summary()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### ( 還沒測試 ) 使用 DenseNet201"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# pretrained_model3 = tf.keras.applications.DenseNet201(input_shape=(100,100,3),include_top=False,weights='imagenet',pooling='avg')\n",
-    "# pretrained_model3.trainable = False\n",
-    "# inputs3 = pretrained_model3.input\n",
-    "# x3 = tf.keras.layers.Dense(128, activation='relu')(pretrained_model3.output)\n",
-    "# outputs3 = tf.keras.layers.Dense(len(Name), activation='softmax')(x3)\n",
-    "# model = tf.keras.Model(inputs=inputs3, outputs=outputs3)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### ( 還沒測試 ) 使用 Sequential 模型"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# model.add(Conv2D(filters=32, kernel_size=3, strides=1, padding='same', activation='relu', input_shape=[150, 150, 3]))\n",
-    "# model.add(MaxPooling2D(2))\n",
-    "# model.add(Conv2D(filters=64, kernel_size=3, strides=1, padding='same', activation='relu'))\n",
-    "# model.add(MaxPooling2D(2))\n",
-    "# model.add(Conv2D(filters=128, kernel_size=3, strides=1, padding='same', activation='relu'))\n",
-    "# model.add(MaxPooling2D(2))\n",
-    "# model.add(Conv2D(filters=64, kernel_size=3, strides=1, padding='same', activation='relu'))\n",
-    "# model.add(MaxPooling2D(2))\n",
-    "# model.add(Conv2D(filters=32, kernel_size=3, strides=1, padding='same', activation='relu'))\n",
-    "# model.add(MaxPooling2D(2))\n",
-    "# # Flatten the feature map\n",
-    "# model.add(Flatten())\n",
-    "# # Add the fully connected layers\n",
-    "# model.add(Dense(128, activation='relu'))\n",
-    "# model.add(Dropout(0.25))\n",
-    "# model.add(Dense(128, activation='relu'))\n",
-    "# model.add(Dense(100, activation='softmax'))\n"
    ]
   }
  ],
