--- a/IFang-Program/Final_Project/Training_History.ipynb
+++ b/IFang-Program/Final_Project/Training_History.ipynb
@@ -1751,7 +1751,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Resnet18 模型 ( 尚未測試 )"
+    "### Resnet18 模型 ( 效果不好 )"
    ]
   },
   {
@@ -1771,7 +1771,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Resnet50 模型 ( 尚未測試 )"
+    "### Resnet50 模型 ( 效果不好 )"
    ]
   },
   {
@@ -1839,7 +1839,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Xception 尚未測試"
+    "Xception ( accuracy: 0.6216 loss: 1.5054 kaggle: 0.71920)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# base = keras.applications.Xception(weights = 'imagenet', include_top = False, input_shape = INPUT_SHAPE)\n",
+    "# for layer in base.layers:\n",
+    "#     layer.trainable =  False\n",
+    "\n",
+    "# model = Sequential()\n",
+    "# model.add(base)\n",
+    "# model.add(GlobalAveragePooling2D())\n",
+    "\n",
+    "# model.add(Dense(256, activation='relu', kernel_regularizer=l2(L2)))\n",
+    "# model.add(BatchNormalization())\n",
+    "# model.add(Dropout(0.2))\n",
+    "\n",
+    "# model.add(Dense(256, activation='relu', kernel_regularizer=l2(L2)))\n",
+    "# model.add(BatchNormalization())\n",
+    "# model.add(Dropout(0.2))\n",
+    "\n",
+    "# model.add(Dense(len(train_generator.class_indices), activation='softmax'))\n",
+    "# model.summary()"
    ]
   },
   {
@@ -1885,21 +1911,169 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### DenseNet201 尚未測試"
+    "#### DenseNet201 ( accuracy: 0.7266 loss: 1.0236 kaggle: 0.79800)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pretrained_model3 = tf.keras.applications.DenseNet201(input_shape=(100,100,3),include_top=False,weights='imagenet',pooling='avg')\n",
-    "# pretrained_model3.trainable = False\n",
-    "# inputs3 = pretrained_model3.input\n",
-    "# x3 = tf.keras.layers.Dense(128, activation='relu')(pretrained_model3.output)\n",
-    "# outputs3 = tf.keras.layers.Dense(len(Name), activation='softmax')(x3)\n",
-    "# model = tf.keras.Model(inputs=inputs3, outputs=outputs3)"
+    "# base = keras.applications.DenseNet201(weights = 'imagenet', include_top = False, input_shape = INPUT_SHAPE)\n",
+    "# for layer in base.layers:\n",
+    "#     layer.trainable =  False\n",
+    "\n",
+    "# model = Sequential()\n",
+    "# model.add(base)\n",
+    "# model.add(GlobalAveragePooling2D())\n",
+    "\n",
+    "# model.add(Dense(256, activation='relu', kernel_regularizer=l2(L2)))\n",
+    "# model.add(BatchNormalization())\n",
+    "# model.add(Dropout(0.2))\n",
+    "\n",
+    "# model.add(Dense(256, activation='relu', kernel_regularizer=l2(L2)))\n",
+    "# model.add(BatchNormalization())\n",
+    "# model.add(Dropout(0.2))\n",
+    "\n",
+    "# model.add(Dense(len(train_generator.class_indices), activation='softmax'))\n",
+    "# model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### DenseNet201 ( kaggle: 0.81247)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# base = keras.applications.DenseNet201(weights = 'imagenet', include_top = False, input_shape = INPUT_SHAPE)\n",
+    "# for layer in base.layers:\n",
+    "#     layer.trainable =  False\n",
+    "\n",
+    "# model = Sequential()\n",
+    "# model.add(base)\n",
+    "# model.add(GlobalAveragePooling2D())\n",
+    "# model.add(Dropout(0.2))\n",
+    "# model.add(BatchNormalization())\n",
+    "\n",
+    "# model.add(Dense(512, activation='selu', kernel_regularizer=l2(L2)))\n",
+    "# model.add(Dropout(0.2))\n",
+    "\n",
+    "# model.add(Dense(256, activation='selu', kernel_regularizer=l2(L2)))\n",
+    "# model.add(Dropout(0.2))\n",
+    "# model.add(BatchNormalization())\n",
+    "\n",
+    "# model.add(Dense(len(train_generator.class_indices), activation='softmax'))\n",
+    "# model.summary()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### DenseNet201 (kaggle: 0.84432)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# base = keras.applications.DenseNet201(weights = 'imagenet', include_top = False, input_shape = INPUT_SHAPE)\n",
+    "# for layer in base.layers:\n",
+    "#     layer.trainable =  False\n",
+    "\n",
+    "# model = Sequential()\n",
+    "# model.add(base)\n",
+    "# model.add(GlobalAveragePooling2D())\n",
+    "# model.add(Dropout(0.2))\n",
+    "# model.add(BatchNormalization())\n",
+    "\n",
+    "# model.add(Dense(512, activation='selu', kernel_regularizer=l2(L2)))\n",
+    "# model.add(Dropout(0.2))\n",
+    "\n",
+    "# model.add(Dense(256, activation='selu', kernel_regularizer=l2(L2)))\n",
+    "# model.add(Dropout(0.2))\n",
+    "# model.add(BatchNormalization())\n",
+    "\n",
+    "# model.add(Dense(len(train_generator.class_indices), activation='softmax'))\n",
+    "# model.summary()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# total_train_steps = len(train_generator) * EPOCHS\n",
+    "# warmup_steps = int(total_train_steps * 0.10)\n",
+    "# decay_steps = total_train_steps - warmup_steps\n",
+    "\n",
+    "# cosine_decay = keras.optimizers.schedules.CosineDecay(\n",
+    "#             initial_learning_rate=LR,\n",
+    "#             decay_steps=decay_steps,\n",
+    "#             alpha=0.0,\n",
+    "#             warmup_target=WARMUP_LR,\n",
+    "#             warmup_steps=warmup_steps,\n",
+    "#         )\n",
+    "# opt = keras.optimizers.Adam(learning_rate=cosine_decay)\n",
+    "\n",
+    "# from keras.losses import CategoricalCrossentropy\n",
+    "\n",
+    "# model.compile(optimizer=opt, \n",
+    "#               loss=CategoricalCrossentropy(label_smoothing=0.1), \n",
+    "#               metrics=['accuracy', keras.metrics.CategoricalCrossentropy(label_smoothing=0.1), keras.metrics.F1Score(average='macro', dtype='float32')])\n",
+    "\n",
+    "# history = model.fit(train_generator,\n",
+    "#                     validation_data=validation_generator,\n",
+    "#                     epochs=EPOCHS, \n",
+    "# #                   steps_per_epoch=train_generator.samples // train_generator.batch_size,\n",
+    "# #                   validation_steps=validation_generator.samples // validation_generator.batch_size,\n",
+    "#                     callbacks=my_callbacks,\n",
+    "#                     verbose = 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DenseNet201 ( kaggle: 0.84046 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# base = keras.applications.DenseNet201(weights = 'imagenet', include_top = False, input_shape = INPUT_SHAPE)\n",
+    "# for layer in base.layers:\n",
+    "#     layer.trainable =  False\n",
+    "\n",
+    "# model = Sequential()\n",
+    "# model.add(base)\n",
+    "# model.add(GlobalAveragePooling2D())\n",
+    "# model.add(Dropout(0.25))\n",
+    "# model.add(BatchNormalization())\n",
+    "\n",
+    "# model.add(Dense(512, activation='selu', kernel_regularizer=l2(L2)))\n",
+    "# model.add(Dropout(0.25))\n",
+    "\n",
+    "# model.add(Dense(256, activation='selu', kernel_regularizer=l2(L2)))\n",
+    "# model.add(Dropout(0.25))\n",
+    "# model.add(BatchNormalization())\n",
+    "\n",
+    "# model.add(Dense(len(train_generator.class_indices), activation='softmax'))\n",
+    "# model.summary()\n"
    ]
   },
   {
@@ -1913,7 +2087,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### MobileNetV2 模型 (accuracy: 0.6684 loss: 1.3281 kaggle: 0.73399) "
+    "### DenseNet201 ( kaggle: 0.84046 )"
    ]
   },
   {
@@ -1964,7 +2138,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### VGG16 模型 (accuracy: 0.6633  loss: 1.3100 kaggle: 0.74059)"
+    "### Dense201 ( kaggle: 0.84432)"
    ]
   },
   {
@@ -1976,9 +2150,11 @@
     "\n",
     "- BSIZE = 64\n",
     "\n",
+    "- base + 1 Layer (Dropout (0.2))\n",
+    "\n",
     "- optimizer='adam' ( Learning Rate = 0.001)\n",
     "\n",
-    "- Epoch = 10"
+    "- Epoch = 20"
    ]
   },
   {
@@ -1987,24 +2163,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# base = tf.keras.applications.VGG16(weights = 'imagenet', include_top = False, input_shape = INPUT_SHAPE)\n",
+    "# base = keras.applications.DenseNet201(weights = 'imagenet', include_top = False, input_shape = INPUT_SHAPE)\n",
     "# for layer in base.layers:\n",
     "#     layer.trainable =  False\n",
     "\n",
     "# model = Sequential()\n",
     "# model.add(base)\n",
     "# model.add(GlobalAveragePooling2D())\n",
-    "\n",
-    "# model.add(Dense(256, activation='relu', kernel_regularizer=l2(L2)))\n",
+    "# model.add(Dropout(0.2))\n",
     "# model.add(BatchNormalization())\n",
+    "\n",
+    "# model.add(Dense(512, activation='selu', kernel_regularizer=l2(L2)))\n",
     "# model.add(Dropout(0.2))\n",
     "\n",
-    "# model.add(Dense(256, activation='relu', kernel_regularizer=l2(L2)))\n",
-    "# model.add(BatchNormalization())\n",
+    "# model.add(Dense(256, activation='selu', kernel_regularizer=l2(L2)))\n",
     "# model.add(Dropout(0.2))\n",
+    "# model.add(BatchNormalization())\n",
     "\n",
     "# model.add(Dense(len(train_generator.class_indices), activation='softmax'))\n",
     "# model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# total_train_steps = len(train_generator) * EPOCHS\n",
+    "# warmup_steps = int(total_train_steps * 0.10)\n",
+    "# decay_steps = total_train_steps - warmup_steps\n",
+    "\n",
+    "# cosine_decay = keras.optimizers.schedules.CosineDecay(\n",
+    "#             initial_learning_rate=LR,\n",
+    "#             decay_steps=decay_steps,\n",
+    "#             alpha=0.0,\n",
+    "#             warmup_target=WARMUP_LR,\n",
+    "#             warmup_steps=warmup_steps,\n",
+    "#         )\n",
+    "# opt = keras.optimizers.Adam(learning_rate=cosine_decay)\n",
+    "\n",
+    "# from keras.losses import CategoricalCrossentropy\n",
+    "\n",
+    "# model.compile(optimizer=opt, \n",
+    "#               loss=CategoricalCrossentropy(label_smoothing=0.1), \n",
+    "#               metrics=['accuracy', keras.metrics.CategoricalCrossentropy(label_smoothing=0.1), keras.metrics.F1Score(average='macro', dtype='float32')])\n",
+    "\n",
+    "# history = model.fit(train_generator,\n",
+    "#                     validation_data=validation_generator,\n",
+    "#                     epochs=EPOCHS, \n",
+    "# #                   steps_per_epoch=train_generator.samples // train_generator.batch_size,\n",
+    "# #                   validation_steps=validation_generator.samples // validation_generator.batch_size,\n",
+    "#                     callbacks=my_callbacks,\n",
+    "#                     verbose = 1)"
    ]
   }
  ],
